// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField renders with a date value and matches snapshot 1`] = `
<View
  style={
    {
      "marginBottom": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "600",
          "marginBottom": 6,
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    Purchase Date
  </Text>
  <View
    accessibilityLabel="Purchase Date: 2025-06-15"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "paddingHorizontal": 14,
        },
        {
          "backgroundColor": "#F8FAFC",
          "borderColor": "#E2E8F0",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#64748B",
            "fontSize": 16,
          },
          {
            "marginRight": 6,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 14,
          },
          {
            "color": "#0F172A",
          },
        ]
      }
    >
      2025-06-15
    </Text>
  </View>
</View>
`;

exports[`FormField renders error state and matches snapshot 1`] = `
<View
  style={
    {
      "marginBottom": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "600",
          "marginBottom": 6,
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    Email
  </Text>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "paddingHorizontal": 14,
        },
        {
          "backgroundColor": "#F8FAFC",
          "borderColor": "#EF4444",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Email"
      editable={true}
      onChangeText={[MockFunction]}
      placeholderTextColor="#64748B"
      style={
        [
          {
            "fontSize": 14,
            "paddingVertical": 0,
          },
          {
            "color": "#0F172A",
          },
        ]
      }
      textAlignVertical="center"
      value=""
    />
  </View>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "marginLeft": 4,
          "marginTop": 4,
        },
        {
          "color": "#EF4444",
        },
      ]
    }
  >
    This field is required
  </Text>
</View>
`;

exports[`FormField renders multiline variant 1`] = `
<View
  style={
    {
      "marginBottom": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "600",
          "marginBottom": 6,
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    Description
  </Text>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "borderWidth": 1,
          "minHeight": 100,
          "padding": 14,
        },
        {
          "backgroundColor": "#F8FAFC",
          "borderColor": "#E2E8F0",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Description"
      editable={true}
      multiline={true}
      onChangeText={[MockFunction]}
      placeholderTextColor="#64748B"
      style={
        [
          {
            "fontSize": 14,
            "minHeight": 76,
          },
          {
            "color": "#0F172A",
          },
        ]
      }
      textAlignVertical="top"
      value="Some long text"
    />
  </View>
</View>
`;

exports[`FormField renders with basic props and matches snapshot 1`] = `
<View
  style={
    {
      "marginBottom": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "600",
          "marginBottom": 6,
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    Item Name
  </Text>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "paddingHorizontal": 14,
        },
        {
          "backgroundColor": "#F8FAFC",
          "borderColor": "#E2E8F0",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Item Name"
      editable={true}
      onChangeText={[MockFunction]}
      placeholderTextColor="#64748B"
      style={
        [
          {
            "fontSize": 14,
            "paddingVertical": 0,
          },
          {
            "color": "#0F172A",
          },
        ]
      }
      textAlignVertical="center"
      value="Charizard"
    />
  </View>
</View>
`;

exports[`SelectField renders with options and matches snapshot 1`] = `
<View
  style={
    {
      "marginBottom": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "600",
          "marginBottom": 6,
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    Category
  </Text>
  <View
    accessibilityLabel="Category: Pokemon"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "space-between",
          "paddingHorizontal": 14,
        },
        {
          "backgroundColor": "#F8FAFC",
          "borderColor": "#E2E8F0",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 14,
            "marginRight": 6,
          },
          {
            "color": "#0F172A",
          },
        ]
      }
    >
      Pokemon
    </Text>
    <Text />
  </View>
</View>
`;
